--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/rest4j
+spring.datasource.username=root
+spring.datasource.password=root
 
+server.port=8080
+# server.servlet.context-path=/ilhan
